-fix: folder hierarchy, fix: Responsive design 1 tagline text overflow

--- a/Responsive design 1/style.css
+++ b/Responsive design 1/style.css
@@ -148,15 +148,13 @@ header {
     overflow: hidden;
     text-align: center;
     width: 100%;
+    height: 110px;
 }
 
 .tagline > h1 {
-    font-size: 50px;
+    font-size: 60px;
     text-align: center;
-    overflow: hidden;
-    text-overflow: clip;
     white-space: nowrap; 
-    justify-content: center;
     position: relative;
 }
 
@@ -224,7 +222,6 @@ header {
 .footer-flex-container {
     display: flex;
     flex-direction: row;
-
 }
 
 .footer-flex-container > p{
@@ -235,7 +232,6 @@ header {
     display: flex;
     flex-direction: row;
     margin-left: auto;
-    
 }
 
 .footer-flex-container-end > a {
